--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                 </div>
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/atardecer.png" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/atardecer.PNG" alt="..." /></div>
                     <div class="col-lg-6">
                 <div class="bg-black text-center h-100 project">
                     <div class="d-flex h-100">
@@ -106,7 +106,7 @@
         </div>
         <!-- Project Two Row-->
         <div class="row gx-0 justify-content-center">
-            <div class="col-lg-6"><img class="img-fluid" src="assets/img/caminata.png" alt="..." /></div>
+            <div class="col-lg-6"><img class="img-fluid" src="assets/img/caminata.PNG" alt="..." /></div>
             <div class="col-lg-6 order-lg-first">
                 <div class="bg-black text-center h-100 project">
                     <div class="d-flex h-100">
@@ -121,7 +121,7 @@
         </div>
         <!-- Project One Row-->
         <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="assets/img/noche.png" alt="..." /></div>
+                <div class="col-lg-6"><img class="img-fluid" src="assets/img/noche.PNG" alt="..." /></div>
                 <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
                 <div class="d-flex h-100">
@@ -138,7 +138,7 @@
     <br>
         <!-- Featured Project Row-->
         <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-            <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/adios.png" alt="..." />
+            <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/adios.PNG" alt="..." />
             </div>
             <div class="col-xl-4 col-lg-5">
                 <div class="featured-text text-center text-lg-left">
